--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
-          version: "latest"
+         version: "1.5.46"
 
       - name: Render
         uses: quarto-dev/quarto-actions/render@v2
